--- a/app/index.html
+++ b/app/index.html
@@ -47,18 +47,20 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-        <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/about.js"></script>
-        <script src="scripts/controllers/issues_controller.js"></script>
-        <script src="scripts/controllers/health.js"></script>
+    <!-- build:js({.tmp,app}) scripts/scripts.js -->
+    <script src="scripts/app.js"></script>
+    <script src="scripts/config.js"></script>
 
-        <script src="scripts/services/auth_service.js"></script>
-        <script src="scripts/services/config.js"></script>
-        <script src="scripts/services/ticket_service.js"></script>
-        <script src="scripts/services/login_service.js"></script>
-        <!-- endbuild -->
+    <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/controllers/about.js"></script>
+    <script src="scripts/controllers/issues_controller.js"></script>
+    <script src="scripts/controllers/login_controller.js"></script>
+    <script src="scripts/controllers/health.js"></script>
+
+    <script src="scripts/services/auth_service.js"></script>
+    <script src="scripts/services/ticket_service.js"></script>
+    <script src="scripts/services/login_service.js"></script>
+    <!-- endbuild -->
 </body>
 
 </html>
